Import to correct repository

--- a/about.html
+++ b/about.html
@@ -5,7 +5,33 @@
   <title>Interstellar Observatory</title>
   <link rel="stylesheet" href="/css/main.css">
 </head>
+
 <body>
+
+  <header role="header">
+    <div class="header-nav">
+      <nav role="navigation">
+        <ul>
+          <li><a class="current" href="index.html"><span>Home</span></a></li>
+          <li><a href="about.html"><span>About</span></a></li>
+          <li><a href="gallery.html"><span>Gallery</span></a></li>
+        </ul>
+      </nav>
+      <div class="logo-wrap">
+        <img class="logo" src="" alt="">
+      </div>
+    </div>
+  </header>
+
+  <footer>
+    <nav role="navigation">
+      <ul>
+        <li><a href="index.html"<span>Home</span></a></li>
+        <li><a href="about.html"><span>About</span></a></li>
+        <li><a href="gallery.html"><span>Gallery</span></a></li>
+      </ul>
+    </nav>
+  </footer>
 
 </body>
 </html>
