--- a/index.html
+++ b/index.html
@@ -5,7 +5,43 @@
   <title>Interstellar Observatory</title>
   <link rel="stylesheet" href="/css/main.css">
 </head>
+
 <body>
+
+  <header role="header">
+    <div class="header-nav">
+      <nav role="navigation">
+        <ul>
+          <li><a class="current" href="index.html"><span>Home</span></a></li>
+          <li><a href="about.html"><span>About</span></a></li>
+          <li><a href="gallery.html"><span>Gallery</span></a></li>
+        </ul>
+      </nav>
+      <div class="logo-wrap">
+        <img class="logo" src="" alt="">
+      </div>
+    </div>
+  </header>
+
+  <article class="banner-image">
+    <div class="image-flex">
+      <img src="images/iss062e085660.jpg" alt="#">
+      <div class="banner-title">
+        <h2></h2>
+        <a href="gallery.html"><span>Explore Now</span></a>
+      </div>
+    </div>
+  </article>
+
+  <footer>
+    <nav role="navigation">
+      <ul>
+        <li><a href="index.html"<span>Home</span></a></li>
+        <li><a href="about.html"><span>About</span></a></li>
+        <li><a href="gallery.html"><span>Gallery</span></a></li>
+      </ul>
+    </nav>
+  </footer>
 
 </body>
 </html>
