--- a/index.html
+++ b/index.html
@@ -27,19 +27,20 @@
     <div class="image-flex">
       <img src="images/iss062e085660.jpg" alt="#">
       <div class="banner-title">
-        <h2></h2>
-        <a href="gallery.html"><span>Explore Now</span></a>
+        <h2>Interstellar Observatory</h2>
+        <a class="btn" href="gallery.html"><span>Explore Now</span></a>
       </div>
     </div>
   </article>
 
-  <footer>
+  <footer class="footer">
     <nav role="navigation">
       <ul>
         <li><a href="index.html"<span>Home</span></a></li>
         <li><a href="about.html"><span>About</span></a></li>
         <li><a href="gallery.html"><span>Gallery</span></a></li>
       </ul>
+      <small class="copyright">© 2020 Interstellar Observatory</small>
     </nav>
   </footer>
 
