Add section and footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Interstellar Observatory</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="/css/main.css">
+  <link href="css/main.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Spartan&display=swap" rel="stylesheet">
 </head>
@@ -36,8 +36,9 @@
     </div>
   </article>
 
+<section>
   <footer class="footer">
-    <nav role="navigation">
+    <nav role="footer-nav">
       <ul>
         <li><a href="index.html"<span>Home</span></a></li>
         <li><a href="about.html"><span>About</span></a></li>
@@ -46,6 +47,7 @@
       <small class="copyright">© 2020 Interstellar Observatory</small>
     </nav>
   </footer>
+</section>
 
 </body>
 </html>
