--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
 
-  <header role="header">
+  <header role="header-nav-wrap">
     <div class="header-nav">
       <nav role="navigation">
         <ul>
-          <li><a class="current" href="index.html"><span>Home</span></a></li>
-          <li><a href="about.html"><span>About</span></a></li>
-          <li><a href="gallery.html"><span>Gallery</span></a></li>
+          <li><a class="current" href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
         </ul>
       </nav>
       <div class="logo-wrap">
@@ -27,27 +27,31 @@
   </header>
 
   <article class="banner-image">
-    <div class="image-flex">
+    <div class="image-bg">
       <img src="images/iss062e085660.jpg" alt="#">
-      <div class="banner-title">
-        <h2>Interstellar Observatory</h2>
-        <a class="btn" href="gallery.html"><span>Explore Now</span></a>
-      </div>
+    </div>
+    <div class="banner-title">
+      <h2>Interstellar Observatory</h2>
+      <a class="btn" href="gallery.html">Explore Now</a>
     </div>
   </article>
 
-<section>
   <footer class="footer">
-    <nav role="footer-nav">
-      <ul>
-        <li><a href="index.html"<span>Home</span></a></li>
-        <li><a href="about.html"><span>About</span></a></li>
-        <li><a href="gallery.html"><span>Gallery</span></a></li>
-      </ul>
-      <small class="copyright">© 2020 Interstellar Observatory</small>
+    <nav class="navbar navbar-default navbar-custom">
+        <div class="container-fluid">
+            <div class="nav navbar-nav navbar-left">
+                <ul class="footerleft">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
+    <div class="footer-bottom">
+      <small>Copyright © 2017, All Rights Reserved</small>
+    </div>
   </footer>
-</section>
 
 </body>
 </html>
