--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Interstellar Observatory</title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -23,14 +23,21 @@
     </div>
   </header>
 
-  <footer>
-    <nav role="navigation">
-      <ul>
-        <li><a href="index.html"<span>Home</span></a></li>
-        <li><a href="about.html"><span>About</span></a></li>
-        <li><a href="gallery.html"><span>Gallery</span></a></li>
-      </ul>
+  <footer class="footer">
+    <nav class="navbar navbar-default navbar-custom">
+        <div class="container-fluid">
+            <div class="nav navbar-nav navbar-left">
+                <ul class="footerleft">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
+    <div class="footer-bottom">
+      <small>Copyright © 2017, All Rights Reserved</small>
+    </div>
   </footer>
 
 </body>
