--- a/gallery.html
+++ b/gallery.html
@@ -12,9 +12,9 @@
     <div class="header-nav">
       <nav role="navigation">
         <ul>
-          <li><a class="current" href="index.html"><span>Home</span></a></li>
-          <li><a href="about.html"><span>About</span></a></li>
-          <li><a href="gallery.html"><span>Gallery</span></a></li>
+          <li><a class="current" href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="gallery.html">Gallery</a></li>
         </ul>
       </nav>
       <div class="logo-wrap">
