Fix spacing and indents

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <article class="banner-image">
     <div class="image-bg">
-      <img src="images/iss062e085660.jpg" alt="#">
+      <img class="space-1" src="images/space-1.jpg" alt="#">
     </div>
     <div class="banner-title">
       <h2>Interstellar Observatory</h2>
