Add image gallery

--- a/about.html
+++ b/about.html
@@ -3,25 +3,33 @@
 <head>
   <meta charset="utf-8">
   <title>Interstellar Observatory</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Spartan&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-  <header role="header">
-    <div class="header-nav">
-      <nav role="navigation">
-        <ul>
-          <li><a class="current" href="index.html">Home</a></li>
+  <header>
+    <nav class="main-nav">
+      <ul class="main-nav-ul">
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-        </ul>
-      </nav>
-      <div class="logo-wrap">
-        <img class="logo" src="" alt="">
+      </ul>
+    </nav>
+  </header>
+
+  <article class="banner-image">
+    <div class="about">
+      <img class="img-flex" src="images/space-3.jpg" alt="#">
+      <div class="banner">
+        <h2>Interstellar Observatory</h2>
+        <a class="btn" href="gallery.html">Explore Now</a>
       </div>
     </div>
-  </header>
+  </article>
 
   <footer class="footer">
     <nav class="navbar navbar-default navbar-custom">
