--- a/gallery.html
+++ b/gallery.html
@@ -3,25 +3,60 @@
 <head>
   <meta charset="utf-8">
   <title>Interstellar Observatory</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Spartan&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-  <header role="header">
-    <div class="header-nav">
-      <nav role="navigation">
-        <ul>
-          <li><a class="current" href="index.html">Home</a></li>
+  <header>
+    <nav class="main-nav">
+      <ul class="main-nav-ul">
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-        </ul>
-      </nav>
-      <div class="logo-wrap">
-        <img class="logo" src="" alt="">
-      </div>
-    </div>
+      </ul>
+    </nav>
   </header>
+
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="rocket-1.jpg">
+        <img src="rocket-1.jpg" alt="Rocket" width="600" height="400">
+      </a>
+      <div class="desc">Add a description of the image here</div>
+    </div>
+  </div>
+
+
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="space-4.jpg">
+        <img src="space-4.jpg" alt="Galaxy" width="600" height="400">
+      </a>
+      <div class="desc">Add a description of the image here</div>
+    </div>
+  </div>
+
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="earth-1.jpg">
+        <img src="earth-1.jpg" alt="Earth's horizon" width="600" height="400">
+      </a>
+      <div class="desc">Add a description of the image here</div>
+    </div>
+  </div>
+
+  <div class="responsive">
+    <div class="gallery">
+      <a target="_blank" href="space-2.jpg">
+        <img src="space-2.jpg" alt="Earth" width="600" height="400">
+      </a>
+      <div class="desc">Add a description of the image here</div>
+    </div>
+  </div>
 
   <footer class="footer">
     <nav class="navbar navbar-default navbar-custom">
