--- a/index.html
+++ b/index.html
@@ -11,28 +11,23 @@
 
 <body>
 
-  <header role="header-nav-wrap">
-    <div class="header-nav">
-      <nav role="navigation">
-        <ul>
-          <li><a class="current" href="index.html">Home</a></li>
+  <header>
+    <nav class="main-nav">
+      <ul class="main-nav-ul">
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-        </ul>
-      </nav>
-      <div class="logo-wrap">
-        <img class="logo" src="" alt="">
-      </div>
-    </div>
+      </ul>
+    </nav>
   </header>
 
   <article class="banner-image">
-    <div class="image-bg">
-      <img class="space-1" src="images/space-1.jpg" alt="#">
-    </div>
-    <div class="banner-title">
-      <h2>Interstellar Observatory</h2>
-      <a class="btn" href="gallery.html">Explore Now</a>
+    <div class="img">
+      <img class="img-flex" src="images/space-3.jpg" alt="#">
+      <div class="banner">
+        <h2>Interstellar Observatory</h2>
+        <a class="btn" href="gallery.html">Explore Now</a>
+      </div>
     </div>
   </article>
 
